# formulaforge

./: .gitignore  LICENSE  Makefile  PORTFOLIO_PLAN.md  README.md
.claude/PRPs/reports/: frontend-design-plan-report.md
.github/workflows/: ci.yml
artifacts/datasets/: sources.json
backend/: Dockerfile  pyproject.toml
backend/app/: cache.py  contracts.py  evaluator.py  main.py  model.py  service.py
backend/tests/: test_api.py  test_cache.py  test_download.py  test_evaluator.py  test_model.py  test_service.py
docs/: ARCHITECTURE.md  DATA_CARD.md  DEMO.md  DESIGN_DECISIONS.md  EVAL_REPORT.md  MODEL_CARD.md
frontend/: package-lock.json  package.json  playwright.config.ts  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
frontend/api/: index.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EvidenceStrip.tsx  Footer.tsx  FormulaWorkspace.tsx  Header.tsx  Hero.tsx  HowItProves.tsx
frontend/components/hero/: HeroCanvas.tsx  HeroCanvasLoader.tsx  HeroScene.tsx
frontend/components/ui/: dialog.tsx  select.tsx  text-effect.tsx  tooltip.tsx
frontend/components/workspace/: GridPreview.tsx  InstructionField.tsx  ModeSwitch.tsx  SheetControls.tsx  (+3 more)
frontend/e2e/: workspace.spec.ts
frontend/formulaforge_backend/: __init__.py  download.py  main.py  prompting.py  workbooks.py
frontend/lib/: api.ts  grid.ts  ledger.ts
frontend/scripts/: generate-api.mjs
frontend/tests/: FormulaWorkspace.test.tsx  grid.test.ts
ml/data/: seed_examples.jsonl
ml/scripts/: evaluate.py  prepare_data.py  train.py
(+1 files in other folders)
