[project]
name = "formulaforge-backend"
version = "0.1.0"
description = "Local-first formula generation and validation service"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<0.116", "uvicorn[standard]>=0.30,<0.31", "pydantic>=2.9,<3",
  "openpyxl>=3.1,<4", "formulas>=1.2,<2", "python-multipart>=0.0.12,<1"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1", "httpx>=0.27,<1", "ruff>=0.8,<1", "mypy>=1.13,<2", "hypothesis>=6.120,<7"]
ml = ["mlx-lm>=0.20,<1", "pyyaml>=6.0,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
ignore_missing_imports = true
